--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ diff-match-patch==20121119
 Django==2.0.5
 django-adaptors==0.2.5
 django-bootstrap3==10.0.1
+django-debug-toolbar==1.9.1
 django-filter==1.1.0
 django-import-export==1.0.1
 django-tables2==1.21.2
@@ -14,6 +15,7 @@ openpyxl==2.5.4
 psycopg2==2.7.5
 pytz==2018.5
 PyYAML==3.13
+sqlparse==0.2.4
 tablib==0.12.1
 unicodecsv==0.14.1
 xlrd==1.1.0
